<resources>
    <string name="app_name">Sport Contest</string>
    <string name="google_maps_key1" templateMergeStrategy="preserve" translatable="false">AIzaSyDg-RPM3-xvpCTGkjvlaHIySWq7kRtwUg0</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyCo149G1ZODae7POyiypbVJdsqzI3EeveE</string>
    <string name="notification_channel_description">later</string>
    <string name="Country"> Страна: </string>
    <string name="Country_ru">Страна</string>
    <string name="event_city_label"> Город:  </string>
    <string name="event_adress_label"> Адрес:  </string>
    <string name="event_site_label"> Сайт:   </string>
    <string name="event_email_label"> Email:  </string>
    <string name="event_phone_label"> Телефон: </string>
    <string name="vkName">VKontakte: %1$s</string>
    <string name="fbName">FaceBook: %1$s</string>
    <string name="inNane">Instagram: %1$s</string>
    <string name="teleName">Telegram: %1$s</string>
    <string name="ytName">YouTube: %1$s</string>
    <string name="twName">Twitter: %1$s</string>
    <string name="raceDist1">&#8226; %1$s %2$s</string>
    <string name="raceDist2">&#8226; %1$s %2$s</string>
    <string name="raceDist3">&#8226; %1$s %2$s</string>
    <string name="priceOne">&#8226; %1$s %2$s. </string>
    <string name="priceTwo">Формат: %1$s. %2$s</string>
    <string name="noPrice">Стоимость на день покупки уточнйте на сайте организатора</string>
    <string name="country">%1$s</string>
    <string name="sity">%1$s</string>
    <string name="sity_ru">Город</string>
    <string name="search_hint">&#160;Введите или выберите из списка</string>
    <string name="site">%1$s</string>
    <string name="email">%1$s</string>
    <string name="phone">%1$s</string>
    <string name="address">%1$s</string>
    <string name="hint_name">mail@domain.com</string>
    <string name="mail_title">Введите email</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="favorite_title">Избранное</string>
    <string name="mail_notification">Подписки</string>
    <string name="notification">Уведомления</string>
    <string name="event_location">%1$s - %2$s</string>
    <string name="noInternet">Нет интернет соединения</string>
    <string name="noInternet_with_data">Нет соединения. Вы просматриваете ранее сохраненные  данные</string>
    <string name="incored_shared_data_type">Данный тип ссылки не может быть обработан</string>
    <string name="incored_shared_data">Мероприятие отсутствует в списке</string>
    <string name="format_participiaton">Формат участия</string>
    <string name="format_part_kids">&#8226; Детский</string>
    <string name="format_part_one">&#8226; Индивидуальный</string>
    <string name="format_part_team">&#8226; Командный</string>
    <string name="format_part_mass">&#8226; Масс-старт</string>
    <string name="format_part_pair">&#8226; Парный</string>
    <string name="format_part">&#8226; %1$s</string>
    <string name="blank">&#160;</string>
    <string name="format_part_team_chemp">&#8226; Командный (чемпионат)</string>
    <string name="soc_network">Социальные сети</string>
    <string name="loc_label">Координаты</string>
    <string name="event_logo">Event Logo</string>
    <string name="event_picture">Event Picture</string>
    <string name="event_discriptio">Описание</string>
    <string name="event_distance">Дистанция</string>
    <string name="event_price">Стоимость участия</string>
    <string name="event_contacts">Контакты</string>
    <string name="event_longitude">Долгота</string>
    <string name="event_latiitude">Широта&#160;</string>
    <string name="no_info">Нет данных</string>
    <string name="ext_menu">Поиск</string>
    <string name="calendar_menu">Календарь</string>
    <string name="date_fornat">%1$s-%2$s-%3$s</string>
    <string name="event">События</string>
    <string name="fav_event">Избранное</string>
    <string name="location">Местоположение</string>
    <string name="search">Поиск</string>
    <string name="search_btn">ИСКАТЬ</string>
    <string name="search_activity">Результат поиска</string>
    <string name="mail_dialog_message">Введите email для уведомлений о событии</string>
    <string name="notif_box_label">Уведомление</string>
    <string name="notif_box_questeon">Добавить уведомление о гонке?</string>
    <string name="notif_line_1">&#8226; 7 дней до гонки</string>
    <string name="notif_line_2">&#8226; 3 дня до гонки</string>
    <string name="notif_line_3">&#8226; 1 день до гонки</string>
    <string name="activity_title_label">%1$s %2$s %3$s</string>
    <string name="activity_title_label_dot">%1$s.%2$s.%3$s</string>
    <string name="confirmBtn">Подтвердить</string>
    <string name="text_for_srch_btn">Мероприятий по вашему запросу не найдено</string>
    <string name="chose_сity">Выберите список городов</string>
    <string name="chose_country">Выберите список стран</string>
    <string name="ma_menu_title">Список</string>
    <string name="list">список</string>
    <string name="clear_btn">Сброс</string>
    <string name="save_btn">Сохранить</string>
    <string name="event_price_info">У некоторых организаторов цена билета увеличивается по мере приближения старта. Стоимость на день покупки уточняйте на официальном сайте (см. раздел \"контакты\").</string>
    <string name="site_host">*sportcontest.ru</string>
    <string name="share">Поделиться</string>
    <string name="shareUrlLink">https://sportcontest.ru/share?event_id=%1$s</string>

</resources>
