<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="20sp"
    android:layout_marginEnd="20sp"
    android:orientation="vertical">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="30sp"
        android:text="@string/event"
        android:textSize="22sp"
        android:layout_marginTop="10sp"
        android:background="@color/lightGray"/>

    <Switch
        android:id="@+id/switch1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:text="@string/favorite_title" />

    <Switch
        android:id="@+id/switch2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:text="@string/mail_notification" />

    <Switch
        android:id="@+id/switch3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:text="@string/notification" />

    <TextView
        android:layout_width="match_parent"
        android:id="@+id/loc_label_view"
        android:layout_height="30sp"
        android:text="@string/location"
        android:textSize="22sp"
        android:layout_marginTop="20sp"
        android:background="@color/lightGray"/>

    <AutoCompleteTextView
        android:id="@+id/city_choice_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:dropDownAnchor="@id/switch2"
        android:singleLine="true"
        android:hint="@string/sity_ru" />

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="20sp"
        android:background="?android:attr/listDivider" />

    <AutoCompleteTextView
        android:id="@+id/country_choice_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:dropDownAnchor="@id/switch2"
        android:singleLine="true"
        android:hint="@string/Country_ru"/>

    <Button
        android:layout_width="match_parent"
        android:id="@+id/srch_btn"
        android:layout_height="45sp"
        android:layout_marginTop="20sp"
        android:text="@string/search_btn"
        />

</LinearLayout>



